<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/tapToStartLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/start_background"
        android:visibility="visible">

        <TextView
            android:id="@+id/tapToStartButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:background="@drawable/start_button_background"
            android:gravity="center"
            android:text="@string/top_to_start_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/countdownLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/captureLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/imageSelectorLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/image1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image2" />
            </LinearLayout>

            <TextView
                android:id="@+id/get_ready_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageSelectorLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/get_ready_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/capture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/get_ready_textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:text="@string/take_pics_button_text"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <TextView
            android:id="@+id/countdownTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/countdown"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="130sp"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pickImageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:visibility="gone">

        <TextView
            android:id="@+id/pickImageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:text="@string/pick_imge_text"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/imageSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pickImageTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/image1" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image2" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/confirmImageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#CC000000">

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="25dp"
            android:minHeight="40dp"
            android:background="@drawable/button_background"
            android:text="@string/confirm_button_text"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="25dp"
            android:minHeight="40dp"
            android:background="@drawable/button_background"
            android:text="@string/back_button_text"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</RelativeLayout>